# csv-sniffer

./: CMakeLists.txt  Dockerfile
.github/workflows/: ghcr.yml
src/: main.cc
